@@ -1,10 +1,0 @@
-'use babel';
-
-export default class TodoPane {
-  constructor(serializedState) {
-  }
-
-  serialize() {}
-
-  destroy() {}
-}
