@@ -20,7 +20,9 @@
   "dependencies": {
     "tmp": ">=0.0.28",
     "rx-text-search": ">=1.0.0",
-    "atom-package-deps": ">=4.3.1"
+    "atom-package-deps": ">=4.3.1",
+    "atom-space-pen-views": "^2.2.0", 
+    "space-pen": "^5.1.2"
   },
   "consumedServices": {
     "tool-bar": {
